--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
           <h2 id="contact">連絡先</h2>
 
-           <p>今のところメーリングリストはありません。<a href="https://github.com/eller86/">中の人</a>までメール願います。</p>
+           <p><a href="shanghai-mokumoku@freeml.com">メーリングリスト</a>をご利用ください。投稿いただく前に<a href="http://www.freeml.com/shanghai-mokumoku">freeml</a>から登録をお願いします。</p>
 
         </div>
 
