--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-	<title></title>
+	<title>もくもく会＠上海 shanghai-mokumoku</title>
 	<meta name="description" content="Description for mokumoku at Shanghai">
 	<meta name="author" content="mokumoku at Shanghai">
 
