--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 
           <h2 id="schedule">開催日時</h2>
 
-          <p>未定ですが、週末を中心に不定期開催する見込みです。</p>
+          <p>初回を9月8日（土）に開催する予定です。関心をお持ちの方はメーリングリストまでご連絡ください。</p>
 
         </div>
 
