log the result of study meeting at 2012/Mar/24.

--- a/index.html
+++ b/index.html
@@ -63,12 +63,6 @@
 
               <li class="active"><a href="#">Home</a></li>
 
-              <li><a href="#contact">連絡先</a></li>
-
-              <li><a href="#place">開催場所</a></li>
-
-              <li><a href="#schedule">開催日時</a></li>
-
             </ul>
 
           </div><!--/.nav-collapse -->
@@ -100,34 +94,25 @@
       <!-- Example row of columns -->
 
       <div class="row">
-
         <div class="span4">
-
-          <h2 id="contact">連絡先</h2>
-
-           <p><a href="shanghai-mokumoku@freeml.com">メーリングリスト</a>をご利用ください。投稿いただく前に<a href="http://www.freeml.com/shanghai-mokumoku">freeml</a>から登録をお願いします。</p>
-
+        <div class="span4">
+          <h2>2013年3月24日 学习会</h2>
+          <ul>
+            <li>Python</li>
+            <li>Weibo API</li>
+            <li>Go language</li>
+            <li>How to build own cloud</li>
+            <li>Automated test with Jenkins and AWS</li>
+            <li><a href="https://github.com/eller86/slides/tree/4d21ea98f22373f1859dcaa9fc372210f5b1711a/advanced-requirejs">Advanced RequireJS</a></li>
+            <li>JavaScript Closure</li>
+            <li>Tomcat</li>
+          </ul>
         </div>
-
         <div class="span4">
-
-          <h2 id="place">開催場所</h2>
-
-           <p>未定です。</p>
-
-       </div>
-
-        <div class="span4">
-
-          <h2 id="schedule">開催日時</h2>
-
-          <p>初回を9月8日（土）に開催する予定です。関心をお持ちの方はメーリングリストまでご連絡ください。</p>
-
         </div>
-
+        <div class="span4">
+        </div>
       </div>
-
-
 
       <hr>
 
@@ -135,7 +120,7 @@
 
       <footer>
 
-        <p>&copy; mokumoku at Shanghai 2012</p>
+        <p>&copy; mokumoku at Shanghai 2012 - 2013</p>
 
       </footer>
 
