--- a/index.html
+++ b/index.html
@@ -95,8 +95,7 @@
 
       <div class="row">
         <div class="span4">
-        <div class="span4">
-          <h2>2013年3月24日 学习会</h2>
+          <h2>2013年3月24日 1st 学习会</h2>
           <ul>
             <li>Python</li>
             <li>Weibo API</li>
@@ -109,8 +108,10 @@
           </ul>
         </div>
         <div class="span4">
+          <h2>2013年?月?日 2nd 学习会</h2>
         </div>
         <div class="span4">
+          <h2>2013年?月?日 3rd 学习会</h2>
         </div>
       </div>
 
