fixed invalid character

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <li>Python</li>
             <li>Weibo API</li>
             <li>Go language</li>
-            <li><a href="http://www.slideshare.net/leopard.android/fun-with-nested-esxi">Fun with nested ESXi - How to build "cloud" in your home</a></li>
+            <li><a href="http://www.slideshare.net/leopard.android/fun-with-nested-esxi">Fun with nested ESXi - How to build &quot;cloud&quot; in your home</a></li>
             <li>Automated test with Jenkins and AWS</li>
             <li><a href="https://github.com/eller86/slides/tree/4d21ea98f22373f1859dcaa9fc372210f5b1711a/advanced-requirejs">Advanced RequireJS</a></li>
             <li>JavaScript Closure</li>
